tests/baselines/reference/parserSuperExpression2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/SuperExpressions/parserSuperExpression2.ts (2 errors) ====
    class C {
      M() {
        super<T>(0);
             ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
        ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
      }
    }